--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="footer-col">
       <abbr title="Last build on {{site.time | date: '%Y-%m-%d'}}">{{ site.time | date: '%B %Y'}}</abbr>
     </div>
-    <div class="footer-col">
+    <div class="footer-col site-desc">
       <a href="https://github.com/johndcobb/johndcobb.github.io/edit/master/{{page.path}}">Edit this page</a> </br>
       Thanks to <a href="https://www.domoritz.de">Dominik Moritz</a> for developing the template.
     </div>
