--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,6 @@
     <div class="footer-col">
       <a href="https://github.com/johndcobb/johndcobb.github.io/edit/master/{{page.path}}">Edit this page</a>
     </div>
-    <div class="footer-col site-desc">{{ site.description }} Thanks to <a href="https://www.domoritz.de">Dominik Moritz</a> for developing the template. </div>
+    <div class="footer-col site-desc">{{ site.description }} Thanks to <a href="https://www.domoritz.de">Dominik Moritz</a> for developing this template. </div>
   </div>
 </footer>
