Wait, thats not ready yet.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
     <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}class="active"{% endif %}>Publications</a>
     <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}class="active"{% endif %}>Talks</a>
     <a href="{{ '/assets/Cobb_CV.pdf'}}">CV</a>
-    <a href="{{ '/CV/' | relative_url}}" {% if current[1] == 'CV' %}class="active"{% endif %}>CVtest</a>
+    <!--
+      <a href="{{ '/CV/' | relative_url}}" {% if current[1] == 'cv' %}class="active"{% endif %}>CVtest</a> -->
 
     <span class="external">
       <!-- 
