--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,19 +3,13 @@
   <nav class="container">
     <a class="site-title" href="{{ absolute_url }}/">{{ site.title }}</a>
 
-    <!-- 
-	 <a href="{{ '/projects/' | relative_url }}" {% if current[1] == 'projects' %}class="active"{% endif %}>Projects</a>  
-    -->  
+
+	  <a href="{{ '/organization/' | relative_url }}" {% if current[1] == 'organization' %}class="active"{% endif %}>Organization</a>  
     <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}class="active"{% endif %}>Publications</a>
     <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}class="active"{% endif %}>Talks</a>
-    <a href="{{ '/assets/Cobb_CV.pdf'}}">CV</a>
-    <!--
-      <a href="{{ '/CV/' | relative_url}}" {% if current[1] == 'cv' %}class="active"{% endif %}>CVtest</a> -->
+    <a href="{{ '/cv/' | relative_url}}" {% if current[1] == 'cv' %}class="active"{% endif %}>CV</a>
 
     <span class="external">
-      <!-- 
-        <a href="https://math.stackexchange.com/users/655888/john-c?tab=profile"><i class="fab fa-stack-exchange"></i> Stack Exchange</a> 
-      -->
       <a href="https://github.com/johndcobb"><i class="fab fa-github"></i> GitHub</a>
     </span>
   </nav>
