--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145239790-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-145239790-1');
+</script>
+
   {% include head.html %}
   <body>
     {% include header.html %}
