organization panel test

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -56,7 +56,7 @@
     margin-bottom: 1.5em;
 
     .project {
-      flex-grow: 0.25;
+      flex-grow: 25%;
       flex-basis: 0;
 
       display: flex;
