--- a/_includes/project.html
+++ b/_includes/project.html
@@ -22,8 +22,8 @@
     {% if project.code %}
       <a href="{{ project.code }}"><i class="fab fa-github" aria-hidden="true"></i> Code</a>
     {% endif %}
-    {% if project.paper %}
-      <a href="{{ project.paper }}"><i class="far fa-file-pdf"></i> Paper</a>
+    {% if project.book %}
+      <a href="{{ project.book }}"><i class="fas fa-book"></i> Book</a>
     {% endif %}
     {% if project.video %}
       <a href="{{ project.video }}"><i class="fas fa-film"></i> Video</a>
