--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -40,6 +40,18 @@ body {
   text-decoration-skip: ink;
 }
 
+.button {
+  color: $brand-color;
+  padding: 6px 16px;
+  border-radius: 3px;
+  border: 1px solid lighten($brand-color, 20%);
+
+  &:hover {
+    opacity: 1;
+    text-decoration: none;
+    background-color: lighten($brand-color, 50%);
+  }
+}
 
 
 /**
