Fix CV position on header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,11 @@
     <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}class="active"{% endif %}>Talks</a>
     <a href="{{ '/cv/' | relative_url}}" {% if current[1] == 'cv' %}class="active"{% endif %}>CV</a>
 
-    <!--
-      <span class="external">
-      <a href="https://github.com/johndcobb"><i class="fab fa-github"></i> GitHub</a>
-      </span>
-    -->
+    <span class="external">
+      <!--
+          <a href="https://github.com/johndcobb"><i class="fab fa-github"></i> GitHub</a
+      -->
+    </span>
+
   </nav>
 </header>
