Add buttons, dropdown buttons

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,3 +10,7 @@
     h.innerHTML = '<a href="#' + name + '" class="anchor"><i class="fas fa-hashtag"></i></a>' + trim(title);
   }
 </script>
+
+<script>
+  {% include button.js %}
+</script>
