Fixed button display for mobile.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -274,7 +274,7 @@ iframe {
 }
 
 @include media-query($on-palm) {
-  .button {
+  .button, .dropdown-button {
     font-size: 1.1em;
     background-color: lighten($brand-color, 57%);
   }
