--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
  * Layout classes
  */
 
-.container {
+.container, .button-container {
   max-width: $content-width + 2 * $spacing-unit;
   margin: 0 auto;
   padding: 0 $spacing-unit;
@@ -24,5 +24,13 @@
     max-width: $content-width + $spacing-unit;
     margin: 0 auto;
     padding: 0 $spacing-unit/2;
+  }
+  .button-container {
+    display: flex;
+    max-width: $content-width + $spacing-unit;
+    margin: 0 auto;
+    padding: 0 $spacing-unit/2;
+    flex-direction: column;
+    align-items: center;
   }
 }
