Fix table color

--- a/_sass/_dark.scss
+++ b/_sass/_dark.scss
@@ -56,7 +56,7 @@
     }
 
     .table th {
-      background: #2d4964;
+      background-color: #2d4964;
     }
 
     .dropdown-content a {
@@ -130,7 +130,7 @@
     }
     
     .table th {
-      background: #2d4964;
+      background-color: #2d4964;
     }
 
     .dropdown-content a {
