Fix table header color

--- a/_sass/_dark.scss
+++ b/_sass/_dark.scss
@@ -55,7 +55,7 @@
       background-color: #2d4964;
     }
 
-    .table th {
+    table th {
       background-color: #2d4964;
     }
 
@@ -129,7 +129,7 @@
       background-color: #2d4964;
     }
     
-    .table th {
+    table th {
       background-color: #2d4964;
     }
 
