--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -48,6 +48,7 @@
 
       display: flex;
       flex-direction: column;
+      position: relative;
 
       &:not(:last-child) {
         margin-right: 16px;
@@ -89,6 +90,7 @@
         background-size: cover;
         background-position: top left;
         transition: background 1.5s;
+        z-index: 2;
 
         &:hover {
           background-position: bottom right;
@@ -101,6 +103,8 @@
         a {
           margin-right: 0.5em;
           white-space: nowrap;
+          position: relative;
+          z-index: 2;
         }
       }
     }
