--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -13,6 +13,7 @@
     .project {
       display: flex;
       flex-direction: column;
+      position: relative;
 
       border-radius: 3px;
       padding: 16px;
@@ -52,6 +53,7 @@
         background-position: top left;
 
         transition: background 1.5s;
+        z-index: 2;
 
         &:hover {
           opacity: 1;
@@ -65,6 +67,8 @@
         a {
           margin-right: 0.5em;
           white-space: nowrap;
+          position: relative;
+          z-index: 2;
         }
       }
     }
@@ -93,3 +97,15 @@
     }
   }
 }
+.link-spanner{
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+
+  /* edit: fixes overlap error in IE7/8, 
+     make sure you have an empty gif 
+  background-image: url('empty.gif');*/
+} 
