Changed how buttons lay out on phones

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -274,7 +274,10 @@ iframe {
 }
 
 @include media-query($on-palm) {
-  .button, .dropdown-button {
-    font-size: 1.1em;
+  .button-container {
+    .button, .dropdown-button {
+      display: grid;
+      font-size: 1.1em;
+    }
   }
 }
