Minor changes to button response

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -276,6 +276,7 @@ iframe {
 @include media-query($on-palm) {
   .button, .dropdown-button {
     font-size: 1.1em;
+    background-color: lighten($brand-color, 57%);
   }
 
   .button-container {
