--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,8 @@
     <a href="{{ '/cv/' | relative_url}}" {% if current[1] == 'cv' %}class="active"{% endif %}>CV</a>
 
     <span class="external">
-      <!--
-          <a href="https://github.com/johndcobb"><i class="fab fa-github"></i> GitHub</a
-      -->
+          <a href="https://twitter.com/cobbjd3"><i class="fab fa-twitter"></i> Twitter</a>
+          <a href="https://github.com/johndcobb"><i class="fab fa-github"></i> GitHub</a>
     </span>
 
   </nav>
