--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -85,6 +85,7 @@ nav {
     .site-title {
       flex: 0 1 100%;
       padding: 0;
+      margin-right: 0;
     }
   }
 }
@@ -115,6 +116,7 @@ nav {
 
     a {
       border-radius: 3px;
+      margin: 0;
 
       &:hover {
         border-color: transparent;
