--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="footer-col">
       <abbr title="Last build on {{site.time | date: '%Y-%m-%d'}}">{{ site.time | date: '%B %Y'}}</abbr><br />
-      <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
     </div>
     <div class="footer-col">
+      <a rel="license" href="http://creativecommons.org/licenses/by/4.0/" style="text-decoration: none;"> <i class="fab fa-creative-commons fa-lg"></i> <i class="fab fa-creative-commons-by fa-lg"></i></a>
       <a href="https://github.com/johndcobb/johndcobb.github.io/edit/master/{{page.path}}">Edit this page</a>
     </div>
     <div class="footer-col site-desc">{{ site.description }} Thanks to <a href="https://www.domoritz.de">Dominik Moritz</a> for developing this template. </div>
