--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     </div>
     <div class="footer-col">
       <a rel="license" href="http://creativecommons.org/licenses/by/4.0/" style="text-decoration: none;"> <i class="fab fa-creative-commons fa-lg"></i> <i class="fab fa-creative-commons-by fa-lg"></i></a>
-      <a href="https://github.com/johndcobb/johndcobb.github.io/edit/master/{{page.path}}">Edit this page</a>
+        {% if current[1] != '404.html' %} <a href="https://github.com/johndcobb/johndcobb.github.io/edit/master/{{page.path}}">Edit this page</a>{% endif %}
     </div>
     <div class="footer-col site-desc">{{ site.description }} Thanks to <a href="https://www.domoritz.de">Dominik Moritz</a> for developing this template. </div>
   </div>
