--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
 <header class="page-header">
   <nav class="container">
     <a class="site-title" href="{{ absolute_url }}/">{{ site.title }}</a>
-
-
+    
+    <a href="{{ '/teaching/' | relative_url }}" {% if current[1] == 'teaching' %}class="active"{% endif %}>Teaching</a>
 	  <a href="{{ '/organization/' | relative_url }}" {% if current[1] == 'organization' %}class="active"{% endif %}>Organization</a>  
     <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}class="active"{% endif %}>Publications</a>
     <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}class="active"{% endif %}>Talks</a>
