--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,9 +1,9 @@
 <div class="project">
-  <span class="title">{{ project.title }}</span>
+  <span class="title">{{project.title}}</span>
   {% if project.url || project.code || project.article || project.paper %}
     <a href="{{ project.url || project.code || project.article || project.paper }}" class="preview-image" style="background-image: url('{{ "/images/projects/" | append: project.image | relative_url }}')"><span class="link-spanner"></span></a>
   {% else %}
-    <span class="preview-image" style="background-image: url('{{ "/images/projects/" | append: project.image | relative_url }}')"></span>
+    <span class="preview-image" style="background-image: url('{{ "/images/projects/" | append: project.image | relative_url }}')"><span class="link-spanner"></span></span>
   {% endif %}
   <p>
     {{ project.description | markdownify | remove: '<p>' | remove: '</p>' }}
