--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,8 @@
     <a class="site-title" href="{{ absolute_url }}/">{{ site.title }}</a>
     
     <a href="{{ '/teaching/' | relative_url }}" {% if current[1] == 'teaching' %}class="active"{% endif %}>Teaching</a>
-	  <a href="{{ '/organization/' | relative_url }}" {% if current[1] == 'organization' %}class="active"{% endif %}>Organization</a>  
+    <!-- <a href="{{ '/organization/' | relative_url }}" {% if current[1] == 'organization' %}class="active"{% endif %}>Organization</a>  -->
+    <a href="{{ '/teaching/#organization' | relative_url }}" {% if current[1] == 'organization' %}class="active"{% endif %}>Organization</a> 
     <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}class="active"{% endif %}>Publications</a>
     <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}class="active"{% endif %}>Talks</a>
     <a href="{{ '/cv/' | relative_url}}" {% if current[1] == 'cv' %}class="active"{% endif %}>CV</a>
