--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,6 @@
 
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <link href="{{ '/styles.css' | relative_url }}" rel="stylesheet">
 </head>
