--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="application-name" content="{{ site.title }}">
-  <meta name="theme-color" content="#572c9f">
+  <meta name="theme-color" content="#b00">
   <link rel="shortcut icon" href="{{ '/favicon.ico' | relative_url }}"/>
   <link rel="icon" type="image/png" href="{{ '/favicon.png' | relative_url }}" sizes="250x250" />
 
