add a venue field to travel

--- a/_includes/travel.html
+++ b/_includes/travel.html
@@ -18,6 +18,6 @@
     {% endif %}
   </td>
   <td>
-    {{ travel.title }}{% if travel.where %}, {{ travel.where }}{% endif %}
+    {{ travel.title }}{% if travel.venue %}, {{ travel.venue }}{% endif %}{% if travel.where %}, {{ travel.where }}{% endif %}
   </td>
 </tr>
