--- a/_includes/project.html
+++ b/_includes/project.html
@@ -11,10 +11,10 @@
   <div class="spacer"></div>
   <div class="links">
     {% if project.article %}
-      <a href="{{ project.article }}"><i class="fas fa-newspaper"></i> Post</a>
+      <a href="{{ project.article }}"><i class="fas fa-newspaper" aria-hidden="true"></i> Post</a>
     {% endif %}
     {% if project.demo %}
-      <a href="{{ project.demo }}"><i class="fas fa-play"></i> Demo</a>
+      <a href="{{ project.demo }}"><i class="fas fa-play" aria-hidden="true"></i> Demo</a>
     {% endif %}
     {% if project.url %}
       <a href="{{ project.url }}"><i class="fas fa-link" aria-hidden="true"></i> Website</a>
@@ -23,13 +23,13 @@
       <a href="{{ project.code }}"><i class="fab fa-github" aria-hidden="true"></i> Code</a>
     {% endif %}
     {% if project.book %}
-      <a href="{{ project.book }}"><i class="fas fa-book"></i> Book</a>
+      <a href="{{ project.book }}"><i class="fas fa-book" aria-hidden="true"></i> Book</a>
     {% endif %}
     {% if project.video %}
-      <a href="{{ project.video }}"><i class="fas fa-film"></i> Video</a>
+      <a href="{{ project.video }}"><i class="fas fa-film" aria-hidden="true"></i> Video</a>
     {% endif %}
     {% if project.recording %}
-      <a href="{{ project.recording }}"><i class="fas fa-video"></i> Recording</a>
+      <a href="{{ project.recording }}"><i class="fas fa-video" aria-hidden="true"></i> Recording</a>
     {% endif %}
   </div>
 </div>
