--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -28,7 +28,7 @@
 
   {% if pub.tweet %}
     <a href="https://twitter.com/intent/tweet?text={{ pub.tweet }}&url={{ site.production_url }}/publications/%23{{ anchor }}&via=domoritz&related=domoritz" class="tweet">
-      <i class="fab fa-twitter"></i> <span class="message">{{ pub.tweet }}</span>
+      <i class="fab fa-twitter" aria-hidden="true"></i> <span class="message">{{ pub.tweet }}</span>
     </a>
   {% endif %}
 
