--- a/_includes/search.html
+++ b/_includes/search.html
@@ -3,7 +3,7 @@
     <input type="hidden" name="q" value="site:{{ site.url }}">
     <input class="search" type="text" name="q" results="0" placeholder="Search">
      <button type="submit" class="btn btn-success">
-        <i class="fas fa-search"></i>
+        <i class="fas fa-search" aria-hidden="true"></i>
     </button>
   </fieldset>
 </form>
