Revert "add aria hidden"
This reverts commit 0de214d44d16cb366802aba173ce03a4d78b35fd.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <abbr title="Last build on {{site.time | date: '%Y-%m-%d'}}">{{ site.time | date: '%B %Y'}}</abbr><br />
     </div>
     <div class="footer-col">
-      <a rel="license" href="http://creativecommons.org/licenses/by/4.0/" style="text-decoration: none;"> <i class="fab fa-creative-commons fa-lg" aria-hidden="true"></i> <i class="fab fa-creative-commons-by fa-lg" aria-hidden="true"></i></a>
+      <a rel="license" href="http://creativecommons.org/licenses/by/4.0/" style="text-decoration: none;"> <i class="fab fa-creative-commons fa-lg"></i> <i class="fab fa-creative-commons-by fa-lg"></i></a>
         {% if current[1] != '404.html' %} <a href="https://github.com/johndcobb/johndcobb.github.io/edit/master/{{page.path}}"> Edit this page</a>{% endif %}
     </div>
     <div class="footer-col site-desc">{{ site.description }} Thanks to <a href="https://www.domoritz.de">Dominik Moritz</a> for developing this template. </div>
