Universal analytics --> GA4

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TQY8YHXZNT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TQY8YHXZNT');
+</script>
   {% include head.html %}
   <body>
     <div class="no-print" style="opacity: 0.5">
