--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145239790-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TQY8YHXZNT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-145239790-1');
+  gtag('config', 'G-TQY8YHXZNT');
 </script>
 
   {% include head.html %}
