--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,6 @@
       <a rel="license" href="http://creativecommons.org/licenses/by/4.0/" style="text-decoration: none;"> <i class="fab fa-creative-commons fa-lg" aria-hidden="true"></i> <i class="fab fa-creative-commons-by fa-lg" aria-hidden="true"></i></a>
         {% if current[1] != '404.html' %} <a href="https://github.com/johndcobb/johndcobb.github.io/edit/master/{{page.path}}"> Edit this page</a>{% endif %}
     </div>
-    <div class="footer-col site-desc">{{ site.description }} Thanks to <a href="https://www.domoritz.de">Dominik Moritz</a> for developing this template. </div>
+    <div class="footer-col site-desc">{{ site.description }} </div>
   </div>
 </footer>
