--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     
     <a href="{{ '/teaching/' | relative_url }}" {% if current[1] == 'teaching' %}class="active"{% endif %}>Teaching</a>
     <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}class="active"{% endif %}>Research</a>
-    <a href="{{ '/teaching/#organization' | relative_url }}" {% if current[1] == 'organization' %}class="active"{% endif %}>Organization</a> 
+    <a href="{{ '/teaching/#organizing' | relative_url }}" {% if current[1] == 'organizing' %}class="active"{% endif %}>Organizing</a> 
     <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}class="active"{% endif %}>Talks</a>
     <a href="{{ '/other/' | relative_url }}" {% if current[1] == 'other' %}class="active"{% endif %}>Other</a>
     <a href="{{ '/cv/' | relative_url}}" {% if current[1] == 'cv' %}class="active"{% endif %}>CV</a>
