--- a/_includes/talk.html
+++ b/_includes/talk.html
@@ -1,5 +1,5 @@
 <div class="talk">
-  {{ talk.location }}{% if talk.city %}, <span class="city">{{ talk.city }}</span>{% endif %}
+  {{ talk.location }}{% if talk.type=='Poster' %} (Poster){% endif %}{% if talk.city %}, <span class="city">{{ talk.city }}</span>{% endif %}
 
   <span class="extra-links">
     {% if talk.slides %}
