Add code for 2 new projects

--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -42,7 +42,7 @@
     {% endif %}
     {% if pub.link %}
       <a href="{{ pub.link }}">
-        <i class="fas fa-link" aria-hidden="true"></i> Project
+        <i class="fas fa-link" aria-hidden="true"></i> Code
       </a>
     {% endif %}
     {% if pub.blog %}
