install jekyll directly so things work with new ruby versions

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -23,13 +23,13 @@
   .container {
     max-width: $content-width + $spacing-unit;
     margin: 0 auto;
-    padding: 0 $spacing-unit/2;
+    padding: 0 calc($spacing-unit/2);
   }
   .button-container {
     display: grid;
     max-width: $content-width + $spacing-unit;
     margin: 0 auto;
-    padding: 0 $spacing-unit/2;
+    padding: 0 calc($spacing-unit/2);
     flex-direction: column;
     align-items: center;
   }
