--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
   <body>
     {% include header.html %}
 
-    <div class="page-content">
+    <main class="page-content">
       {{ content }}
-    </div>
+    </main>
 
     {% include footer.html %}
 
