--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,6 @@
 ---
 layout: default
 ---
-<section class="container {{ page.class }}">
+<div class="container {{ page.class }}">
   {{ content }}
-</section>
+</div>
