--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -106,6 +106,11 @@
 
     .cv-pub {
         margin-bottom: 1.2em;
+        margin-left: 0 !important;
+
+            & > * {
+            margin-left: 100px;
+            }
     }
 
     .muted, .muted a {
