add a print button to cv

--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -293,6 +293,10 @@
           display: none;
           color: $text-color;
         }
+
+        #print-button {
+            display: none;
+        }
       }
 
 }
