separate organizing and teaching page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <a class="site-title" href="{{ absolute_url }}/">{{ site.title }}</a>
     
     <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}class="active"{% endif %}>Research</a>
-    <a href="{{ '/teaching/#organizing' | relative_url }}" {% if current[1] == 'organizing' %}class="active"{% endif %}>Organizing</a> 
+    <a href="{{ '/organizing/' | relative_url }}" {% if current[1] == 'organizing' %}class="active"{% endif %}>Organizing</a> 
     <a href="{{ '/teaching/' | relative_url }}" {% if current[1] == 'teaching' %}class="active"{% endif %}>Teaching</a>
     <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}class="active"{% endif %}>Talks</a>
     <a href="{{ '/other/' | relative_url }}" {% if current[1] == 'other' %}class="active"{% endif %}>Other</a>
