--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -15,7 +15,7 @@
         border: none;
         color: $text-color;
         font-family: 'Roboto', Helvetica Neue, sans-serif;
-        page-break-after: avoid;
+        break-after: avoid;
     }
 
     h1 {
@@ -127,6 +127,12 @@
         margin-left: 0;
     }
 
+    .no-break {
+        margin-left: 0 !important;
+        justify-content: space-between;
+        break-inside: avoid;
+    }
+
     .container {
         min-width: 480px;
         max-width: 800px;
@@ -152,6 +158,7 @@
         flex-direction: row;
         align-items: baseline;
         white-space: nowrap;
+        break-after: avoid;
     }
 
     .ref-container {
@@ -177,6 +184,7 @@
         flex: 1;
         }
     }
+
 
     .cv-talk-title {
         margin-top: 1.2em;
@@ -239,6 +247,10 @@
 
     @media print {
         font-size: 0.8rem;
+
+        .date-container, .line-container, .cv-pub, .header-columns {
+            break-inside: avoid;
+        }
 
         a {
             color: $text-color;
@@ -319,7 +331,7 @@
             border: none;
             color: white;
             font-family: 'Roboto', Helvetica Neue, sans-serif;
-            page-break-after: avoid;
+            break-after: avoid;
         }
     
         h1 {
@@ -367,29 +379,6 @@
             text-align: center;
             justify-content: space-between;
         }
-    
-        h3 {
-            margin-top: 0;
-            margin-bottom: 0;
-            font-size: 1.2em;
-            font-weight: 500;
-        }
-    
-        h4 {
-            margin: 0;
-            font-size: 1.1em;
-            font-weight: 500;
-        }
-    
-        hr {
-            display: block;
-            margin-top: 0.5em;
-            margin-bottom: 0.5em;
-            margin-left: auto;
-            margin-right: auto;
-            border-style: solid;
-            border-width: 1px;
-        }
 
         .extra-links {
             font-size: 0.75rem;
@@ -425,12 +414,7 @@
             color: firebrick;
             white-space: nowrap;
         }
-    
-        ul {
-            list-style: none;
-            margin-left: 0;
-        }
-    
+
         .container {
             min-width: 480px;
             max-width: 800px;
@@ -539,7 +523,11 @@
     
         @media print {
             font-size: 0.9rem;
-    
+
+            div, .date-container, .line-container, .cv-pub, .header-columns {
+                break-inside: avoid;
+            }
+
             a {
                 color: $text-color;
             }
