--- a/_layouts/conference.html
+++ b/_layouts/conference.html
@@ -15,11 +15,12 @@
   <body>
     {% assign base_url = page.permalink | relative_url %}
     {% assign current = page.url | downcase | split: '/' %}
+    {% assign sections = page.sections | split: ', ' %}
     <header class="page-header">
     <nav class="container">
-        <a href="{{ '#overview' | base_url }}" {% if current[1] == 'overview' %}class="active"{% endif %}>Overview</a>
-        <a href="{{ '#talks' | base_url }}" {% if current[1] == 'talks' %}class="active"{% endif %}>Talks</a>
-        <a href="{{ '#schedule' | base_url }}" {% if current[1] == 'schedule' %}class="active"{% endif %}>Schedule</a>
+        {% for section in sections %}
+        <a href="{{ section | downcase | replace: ' ', '-' | prepend: '#' | base_url }}">{{ section }}</a> 
+        {% endfor %}
         <a></a>
 
     </nav>
