update google tag

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TQY8YHXZNT"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G4DJ38ZF3X"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-TQY8YHXZNT');
+  gtag('config', 'G-G4DJ38ZF3X');
 </script>
   {% include head.html %}
   <body>
