--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,13 @@
 <html lang="en">
   
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TQY8YHXZNT"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G4DJ38ZF3X"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-TQY8YHXZNT');
+  gtag('config', 'G-G4DJ38ZF3X');
 </script>
 
   {% include head.html %}
