--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,5 @@
+@use "variables" as *;
+
 /**
  * Basic styling
  */
@@ -219,13 +221,13 @@ iframe {
   color: $brand-color;
   padding: 6px 16px;
   border-radius: 3px;
-  border: 1px solid lighten($brand-color, 20%);
+  border: 1px solid #cc3333; // Previously lighten($brand-color, 20%)
   cursor: pointer;
 
   &:hover{
     opacity: 1;
     text-decoration: none;
-    background-color: lighten($brand-color, 50%);
+    background-color: #f2cccc; // Previously lighten($brand-color, 50%)
   }
 }
 
@@ -233,7 +235,7 @@ iframe {
 .press{
   opacity: 1;
   text-decoration: none;
-  background-color: lighten($brand-color, 50%);
+  background-color: #f2cccc; // Previously lighten($brand-color, 50%)
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -257,7 +259,7 @@ iframe {
 /* Links inside the dropdown */
 .dropdown-content a {
   padding: 6px 16px;
-  color: lighten($brand-color, 20%) !important;
+  color: #cc3333 !important; // Previously lighten($brand-color, 20%)
   background-color: $background-color;
   text-decoration: none;
   display: block;
@@ -276,7 +278,7 @@ iframe {
 @include media-query($on-palm) {
   .button, .dropdown-button {
     font-size: 1.1em;
-    background-color: lighten($brand-color, 57%);
+    background-color: #f5d9d9; // Previously lighten($brand-color, 57%)
   }
 
   .button-container {
