--- a/styles.scss
+++ b/styles.scss
@@ -3,53 +3,21 @@
 
 @charset "utf-8";
 
-// Our variables
-$base-font-family: "Fira Sans", sans-serif;
-$base-font-size:   100%;  // 16px by default
-$base-font-weight: 400;
-$bold-font-weight: 500;
-$small-font-size:  0.9em;
-$base-line-height: 1.64;
+// Forward variables so they're available to all modules
+@forward "variables";
 
-$spacing-unit:     32px;
-$content-width:    850px;
-
-$text-color:        #333;
-$background-color:  #fff;
-$brand-color:       #b00;
-$link-color:        #3477ad;
-$header-background: #ececec;
-$footer-background: #234;
-$footer-text:       darken(#fff, 10%);
-
-$grey-color:       #828282;
-$grey-color-lightest: #f8f8f8;
-$grey-color-dark:  darken($grey-color, 15%);
-$grey-color-light:  lighten($grey-color, 15%);
-
-$on-palm:          600px;
-$on-laptop:        800px;
-
-@mixin media-query($device) {
-  @media screen and (max-width: $device) {
-    @content;
-  }
-}
-
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-  "base",
-  "layout",
-  "nav",
-  "footer",
-  "headings",
-  "home",
-  "publications",
-  "projects",
-  "talks",
-  "class",
-  "syntax-highlighting",
-  "cv",
-  "dark"
-;
+// Use partials from `sass_dir` (defaults to `_sass`) 
+@use "base";
+@use "layout"; 
+@use "nav";
+@use "footer";
+@use "headings";
+@use "home";
+@use "publications";
+@use "projects";
+@use "talks";
+@use "class";
+@use "syntax-highlighting";
+@use "cv";
+@use "dark";
 
