add paper links to coding projects

--- a/_includes/project.html
+++ b/_includes/project.html
@@ -15,8 +15,8 @@
   </p>
   <div class="spacer"></div>
   <div class="links">
-    {% if project.article %}
-      <a href="{{ project.article }}"><i class="fas fa-newspaper" aria-hidden="true"></i> Post</a>
+    {% if project.paper %}
+      <a href="{{ project.paper }}"><i class="fas fa-newspaper" aria-hidden="true"></i> Paper</a>
     {% endif %}
     {% if project.demo %}
       <a href="{{ project.demo }}"><i class="fas fa-play" aria-hidden="true"></i> Demo</a>
