change display of travel

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -171,6 +171,7 @@
     padding-left: $spacing-unit;
 
     .date {
+      vertical-align: top;
       white-space: nowrap;
       color: $grey-color;
       padding-right: 1em;
